# cloudhound

./: .coverage  .dockerignore  .env.example  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
cloudhound/: __init__.py
cloudhound/api/: __init__.py  auth.py  server.py  wsgi.py
cloudhound/cli/: __init__.py  main.py
cloudhound/collectors/: __init__.py
cloudhound/collectors/aws/: __init__.py  compute.py  devops.py  ec2.py  iam.py  identity.py  messaging.py  org.py  s3.py  security.py  storage.py  sts.py
cloudhound/collectors/azure/: __init__.py
cloudhound/collectors/gcp/: __init__.py
cloudhound/core/: __init__.py  base.py  graph.py  registry.py
cloudhound/exporters/: __init__.py  html.py  json_export.py  sarif.py
cloudhound/normalizers/: __init__.py
cloudhound/normalizers/aws/: __init__.py  compute.py  ec2.py  iam.py  org.py  s3.py  security.py
cloudhound/rules/: __init__.py
cloudhound/rules/aws/: __init__.py  compute.py  data.py  ec2.py  iam.py  logging.py  s3.py
docs/: ROADMAP.md  domain-model.md  lab.md  neo4j.md  production-plan.md  status.md  ui-neo4j.md
docs/archive/: CRITICAL_ANALYSIS.md  README.md  REMAINING_REMEDIATION_PLAN.md
ui/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf
