[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudhound"
version = "0.2.0"
description = "Multi-cloud security graph analytics"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Jeremy Laratro"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]
keywords = ["cloud", "security", "aws", "gcp", "azure", "graph", "attack-path"]

dependencies = [
    "boto3>=1.28.0",
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
    "neo4j>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
gcp = [
    "google-cloud-resource-manager>=1.0.0",
    "google-cloud-iam>=2.0.0",
    "google-cloud-storage>=2.0.0",
    "google-cloud-compute>=1.0.0",
]
azure = [
    "azure-identity>=1.0.0",
    "azure-mgmt-resource>=23.0.0",
    "azure-mgmt-authorization>=4.0.0",
    "azure-mgmt-storage>=21.0.0",
]
all = [
    "cloudhound[dev,gcp,azure]",
]

[project.urls]
Homepage = "https://github.com/jeremylaratro/cloudhound"
Documentation = "https://github.com/jeremylaratro/cloudhound#readme"
Repository = "https://github.com/jeremylaratro/cloudhound.git"
Issues = "https://github.com/jeremylaratro/cloudhound/issues"

[project.scripts]
cloudhound = "cloudhound.cli.main:main"
awshound = "awshound.cli:main"

[tool.setuptools.packages.find]
include = ["cloudhound*", "awshound*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W", "I", "N", "B", "A", "C4", "SIM"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
